...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#081734"
    tools:context=".addPlayerNames">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/youre_gone"
        android:text="@string/player_1_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296" />

    <EditText
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/youre_gone"
        android:importantForAutofill="no"
...
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />

    <EditText
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/youre_gone"
        android:importantForAutofill="no"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <Button
        android:id="@+id/plyButton"
        android:layout_width="142dp"
        android:layout_height="67dp"
        android:background="@drawable/bttn_border"
        android:fontFamily="@font/youre_gone"
        android:onClick="readyToGo"
        android:shadowColor="#e7b4f8"
...
