...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#081734"
    tools:context=".Choose_player_order">

    <TextView
        android:id="@+id/singlePlayerPrompt"
        android:layout_width="381dp"
        android:layout_height="94dp"
        android:fontFamily="@font/youre_gone"
        android:text="@string/do_you_want_to_first_or_second"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
...
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <Button
        android:id="@+id/playerFirst"
        android:layout_width="293dp"
        android:layout_height="85dp"
        android:background="@drawable/bttn_border"
        android:fontFamily="@font/youre_gone"
        android:onClick="playerFirstClick"
        android:shadowColor="#e7b4f8"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <Button
        android:id="@+id/compFirst"
        android:layout_width="293dp"
        android:layout_height="117dp"
        android:background="@drawable/bttn_border"
        android:fontFamily="@font/youre_gone"
        android:onClick="computerFirstClick"
        android:shadowColor="#e7b4f8"
...
